--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
+    "pg": "^8.6.0",
+    "pg-hstore": "^2.3.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "sequelize": "^6.6.2",
+    "sequelize-cli": "^6.2.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
