--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "pg": "^8.6.0",
     "pg-hstore": "^2.3.3",
     "react": "^17.0.2",
+    "react-datetime-picker": "^3.2.1",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "sequelize": "^6.6.2",
