fix(tests): update tests and documentation

--- a/config/config_example.json
+++ b/config/config_example.json
@@ -10,7 +10,7 @@
   "test": {
     "username": "your_name_here",
     "password": "your_pass_here",
-    "database": "reremesh",
+    "database": "testreremesh",
     "host": "127.0.0.1",
     "port": 5432,
     "dialect": "postgres"
@@ -18,7 +18,7 @@
   "production": {
     "username": "your_name_here",
     "password": "your_pass_here",
-    "database": "reremesh",
+    "database": "prodreremesh",
     "host": "127.0.0.1",
     "port": 5432,
     "dialect": "postgres"
